--- a/local/pressure-washing-adwick.html
+++ b/local/pressure-washing-adwick.html
@@ -238,12 +238,6 @@ The duration depends on the size and condition of the area being cleaned. Most r
 
 <p><strong>Do you provide free quotes?</strong><br>
 Yes, we offer free, no-obligation quotes to help you understand costs upfront before any work begins, ensuring transparency and peace of mind.</p>
-
-<p><strong>Are your cleaning products safe for pets and plants?</strong><br>
-Yes, we can use eco-friendly, pet- and plant-safe solutions to protect your garden while still delivering effective cleaning results.</p>
-
-<p><strong>Can you clean multi-level surfaces?</strong><br>
-Yes, we are experienced in cleaning surfaces at all heights, including steps, retaining walls, and terraces, using the appropriate equipment and safety measures.</p>
 </div>
 
 </section>
@@ -285,10 +279,50 @@ Yes, we are experienced in cleaning surfaces at all heights, including steps, re
 "mainEntity": [
 {
 "@type": "Question",
-"name": "?",
+"name": "How do I prepare my property for pressure washing?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "We recommend removing delicate items and outdoor furniture, and ensuring easy access to the areas being cleaned. This helps us deliver the best results safely and efficiently"
+}
+},
+{
+"@type": "Question",
+"name": "Can pressure washing remove moss and algae?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, pressure washing effectively removes moss, algae, and lichen from driveways, patios, decking, and other exterior surfaces, improving both appearance and safety."
+}
+},
+{
+"@type": "Question",
+"name": "Will pressure washing damage my surfaces?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "No, when performed by professionals. We adjust the water pressure and techniques to suit each surface type, preventing any potential damage while achieving a thorough clean."
+}
+},
+{
+"@type": "Question",
+"name": "What equipment do you use for pressure washing?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "We use professional-grade pressure washers and cleaning solutions to tackle dirt, stains, and organic growth while ensuring safety and efficiency for all surfaces."
+}
+},
+{
+"@type": "Question",
+"name": "Do I need to move my vehicles?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Yes, if vehicles are parked on the areas being cleaned, we recommend moving them to allow full access and ensure a consistent, thorough clean."
+}
+},
+{
+"@type": "Question",
+"name": "Can pressure washing help prevent slip hazards?",
+"acceptedAnswer": {
+"@type": "Answer",
+"text": "Absolutely. By removing algae, moss, and grime, pressure washing reduces slippery surfaces, making paths, patios, and driveways safer to walk on."
 }
 },
 {
@@ -301,58 +335,18 @@ Yes, we are experienced in cleaning surfaces at all heights, including steps, re
 },
 {
 "@type": "Question",
-"name": "",
+"name": "How long does a typical job take?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "The duration depends on the size and condition of the area being cleaned. Most residential jobs are completed within a few hours, while larger properties may take longer."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Do you provide free quotes?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
-}
-},
-{
-"@type": "Question",
-"name": "",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": ""
-}
-},
-{
-"@type": "Question",
-"name": "",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": ""
-}
-},
-{
-"@type": "Question",
-"name": "",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": ""
-}
-},
-{
-"@type": "Question",
-"name": "",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": ""
-}
-},
-{
-"@type": "Question",
-"name": "",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": ""
+"text": "Yes, we offer free, no-obligation quotes to help you understand costs upfront before any work begins, ensuring transparency and peace of mind."
 }
 }
 ]
