--- a/local/pressure-washing-adwick.html
+++ b/local/pressure-washing-adwick.html
@@ -9,7 +9,7 @@
 <title>Professional Pressure Washing in Adwick | Driveways, Patios & Paths</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-adwick.html">
-<meta name="description"Refresh your property with expert pressure washing in Adwick. We clean driveways, patios, paths, and more, removing dirt, moss, algae, and stains safely and effectively. Fully insured service with free quotes available.">
+<meta name="description" content=Refresh your property with expert pressure washing in Adwick. We clean driveways, patios, paths, and more, removing dirt, moss, algae, and stains safely and effectively. Fully insured service with free quotes available.">
 
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
